--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="/2024hexschool_week4/assets/main-c698e596.js"></script>
-    <link rel="stylesheet" href="/2024hexschool_week4/assets/main-f1b96fe1.css">
+    <script type="module" crossorigin src="/2024hexschool_week4/assets/main-b8545fde.js"></script>
+    <link rel="stylesheet" href="/2024hexschool_week4/assets/main-2d80ea2d.css">
   </head>
   <body>
     <!-- Header -->
@@ -56,7 +56,7 @@
       <li
         class="border-sm border-sm-1 border-sm-white w-sm-50 fs-5 fs-sm-4 text-center text-white"
       >
-        <a class="d-block py-sm-3" href="../pages/FAQ.html">常見問題</a>
+        <a class="d-block py-sm-3" href="FAQ.html">常見問題</a>
       </li>
     </ul>
   </div>
