--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     class="container px-sm-0 d-flex justify-between item-center flex-sm-column"
   >
     <div class="d-flex py-sm-3 pl-sm-4 flex-sm-start item-sm-center w-sm-100">
-      <a href="../pages/index.html">
+      <a href="index.html">
         <img
           src="/2024hexschool_week4/assets/logo-white-5423463a.png"
           style="display: block; width: 80px"
